--- a/src/application/config.json
+++ b/src/application/config.json
@@ -1,4 +1,3 @@
 {
-  "DevVariables": { "apiDomain": "http://localhost:3000" },
-  "ProdVariables": { "apiDomain": "https://react-travel-app-bksz.onrender.com" }
+  "apiDomain": "https://jcr24zgexj.execute-api.eu-west-2.amazonaws.com/dev"
 }
