--- a/src/application/config.json
+++ b/src/application/config.json
@@ -1,3 +1,4 @@
 {
-  "apiDomain": "https://jcr24zgexj.execute-api.eu-west-2.amazonaws.com/dev"
+  "apiDomain": "https://jcr24zgexj.execute-api.eu-west-2.amazonaws.com/dev",
+  "#apiDomain": "http://localhost:3000"
 }
